--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProcureApp - Digital Procurement Platform</title>
+    <title>Signatul - Sign and Notule</title>
     <link rel="shortcut icon" href="./favicon.png">
     
     <!-- Phosphor Icons -->
@@ -115,8 +115,8 @@
                 <i class="ph-bold ph-briefcase text-slate-900 text-2xl"></i>
             </div>
             <div class="ml-3">
-                <h1 class="heading-architectural text-lg text-white">PROCUREAPP</h1>
-                <p class="text-[9px] text-slate-400 uppercase tracking-widest font-bold">ENTERPRISE SUITE</p>
+                <h1 class="heading-architectural text-lg text-white">SIGNATUL</h1>
+                <p class="text-[9px] text-slate-400 uppercase tracking-widest font-bold">SIGN AND NOTULE</p>
             </div>
         </div>
 
