--- a/src/index.html
+++ b/src/index.html
@@ -167,6 +167,20 @@
                 <span class="tracking-tight">DOWNLOAD</span>
             </a>
 
+            <div id="nav-admin-group" class="hidden">
+            <div class="pt-6 pb-2">
+            <p class="px-4 text-[10px] font-black text-slate-500 uppercase tracking-widest border-l-2 border-slate-800">ADMIN</p>
+            </div>
+    
+            <a href="#/payment" 
+                id="nav-payment"
+                class="nav-item group flex items-center px-4 py-4 text-slate-400 hover:text-white hover:bg-slate-800/50 font-bold transition-all relative">
+                <i class="ph-bold ph-currency-circle-dollar text-xl mr-4"></i> 
+                <span class="tracking-tight">PAYMENT</span>
+                <span id="payment-badge" class="hidden absolute right-4 top-4 w-2 h-2 bg-red-500 animate-pulse"></span>
+            </a>
+        </div>
+
             <div class="pt-6 pb-2">
                 <p class="px-4 text-[10px] font-black text-slate-500 uppercase tracking-widest border-l-2 border-slate-800">AKUN</p>
             </div>
